tests/error/error01.nex
class A {}

var a;
a = new A();

